# BOFH_Python

./: .dockerignore  .gitignore  BrowserSession.py  Dockerfile  README.md  TOCbuilder.py  Todo.txt  bjashEpisode.py  bofh.db  bofh.epub  convertTime.py  crontab  dataClean.py  database.py  docker-compose.yml  episode.py  export.py  getBjashEpisode.py  getEpisode.py  getExport.py  getLinks.py  getLinksArchive.py  getLinksExtra.py  getStories.py  html.html  main.py  main.sh  main_copy.py  manualGetLinks.py  pyproject.toml  requirements.txt  story.py  test.py
archive/: 01 - Genesis  02 - The Birth of BOFH  03 - Still Birthing the Bastard Operator  04 - Bastard Operator From Hell #1  05 - Bastard Operator From Hell #2  06 - Bastard Operator From Hell #3  07 - Bastard Operator From Hell #4  08 - Bastard Operator From Hell #5  09 - Bastard Operator From Hell #6  10 - Bastard Operator From Hell #7  11 - Bastard Operator From Hell #8  12 - Bastard Operator From Hell #9  13 - Bastard Operator From Hell #10  14 - Bastard Operator From Hell #11  15 - Bastard Operator From Hell #12  16 - Bastard Operator From Hell #13  17 - The Bastard System Manager From Hell #1  18 - The Bastard System Manager From Hell #2  19 - Bastard Operator From Hell #14
bofh/: pyvenv.cfg
dataClean/: bjashEpisode.py  dataClean.py  getBOFHArchive.py  getLinksArchive.py  getLinksExtra.py
output/2000/: EPISODE 10_BOFH plays with Maggot.html  EPISODE 11_BOFH discovers Voice Recognition.html  EPISODE 12_BOFH moonlights CRAP SOFTWARE.html  EPISODE 13_The BOFH interpretation skills test – try it if you DARE.html  (+37 more)
(+487 files in other folders)
