[project]
name = "bofh-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ebooklib==0.18",
    "greenlet==3.1.1",
    "lxml==5.3.1",
    "playwright==1.51.0",
    "pyee==12.1.1",
    "pytz==2025.2",
    "six==1.17.0",
    "typing-extensions==4.13.0",
]
